gcp/gke/growi/growi-app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: growi
  namespace: growi-tools
  labels:
    app: growi
spec:
  serviceName: "growi"
  selector:
    matchLabels:
      app: growi
  replicas: 1
  template:
    metadata:
      labels:
        app: growi
      name: growi
    spec:
      containers:
      - name: growi
        image: weseek/growi:3
        command: ["dockerize", "-wait", "tcp://mongo:27017", "-wait", "tcp://elasticsearch:9200", "-timeout", "60s", "npm", "run", "server:prod"]
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: growi-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata: 
      name: growi-data
      namespace: growi-tools
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: growi-ssd
      resources: 
        requests:
          storage: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: growi
  name: growi
  namespace: growi-tools
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: growi
