gcp/gke/growi/mongo.yaml
# Database(mongo)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: growi-tools
  labels:
    app: mongo
spec:
  serviceName: "mongo"
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
      name: mongo
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: mongo
        image: mongo:3.6
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-persistent
          mountPath: /data
  volumeClaimTemplates:
  - metadata: 
      name: mongodb-persistent
      namespace: growi-tools
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: growi-ssd
      resources: 
        requests:
          storage: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: growi-tools
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
