gcp/gke/growi/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-growi
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: "ip-growi"
    networking.gke.io/managed-certificates: "cert-growi-app"
spec:
  rules:
  - host: dev.wiki.hotstaff-dev.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: growi
          servicePort: 80
